# angular-django

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.rst  dev-requirements.txt  docker-compose.yml  pypi_readme.rst  requirements.in  requirements.txt  setup.cfg
angular-demo/: angular.json  karma.conf.js  package-lock.json  package.json  tslint.json
angular-demo/src/app/: app-routing.module.ts  app.component.html  app.component.ts
angular-demo/src/app/form-api-service/: form-api-service.component.scss  form-api-service.component.spec.ts  form-api-service.component.ts  form-api-service.module.ts
angular-demo/src/app/list-api-service/: list-api-service.module.ts
angular-demo/src/app/retrieve-api-service/: retrieve-api-service.component.spec.ts  retrieve-api-service.component.ts  retrieve-api-service.module.ts
angular-demo/src/app/shared/: api.service.ts  shared.module.ts
angular-django/: README.md  package-lock.json  package.json  tsconfig.json
angular-django/projects/angular-django/: ng-package.json  tslint.json
compose/gunicorn/: entrypoint.sh
conf/nginx/conf.d/: demo.conf
demo/: settings.py
demo/angular/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json  tsconfig.json
demo/angular/src/: index.html  jekyll-github.scss  styles.scss
demo/django/: dev-requirements.in  requirements.in
demo/django/demo/: settings.py
demo/django/pokedex/: admin.py  filters.py  import_pokedex.py  models.py  serializers.py  urls.py  viewsets.py
django_demo/: asgi.py  requirements.in  requirements.txt  settings.py  urls.py  wsgi.py
django_demo/demo/: settings.py  urls.py
django_demo/pokedex/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
docs/: Makefile  api_guide.rst  build_docs.py  conf.py  first_steps.rst  index.rst  installation.rst  requirements.in  requirements.txt
src/angular/: angular.json  package-lock.json  package.json  tsconfig.json
src/django/: LICENSE  README.rst  setup.cfg  setup.py
src/django/angular_django/: __init__.py  metadata.py  pagination.py  rest_framework.py  typescript.py
(+124 files in other folders)
