[metadata]
name = angular-django
version = attr: angular_django.__version__
author = Nekmo
author-email = contacto@nekmo.com
url = https://github.com/Nekmo/angular-django/
download_url = https://github.com/Nekmo/angular-django/archive/master.zip
description = Django Rest Framework API for Angular with self-building classes, forms, and listings
long-description = file: README.rst
license = MIT
license-file = LICENSE
platform = any
keywords = angular-django

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src/django
packages = angular_django

[bdist_wheel]
universal = 1

[sdist]
formats = zip, gztar

[check]
metadata = True
restructuredtext = True
strict = True

[bumpversion]
current_version = 0.0.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:angular_django/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'


[flake8]
exclude = docs

[aliases]

# Define setup.py command aliases here
